Attempted to fix display on mobile, minor updates

--- a/home-style.css
+++ b/home-style.css
@@ -101,7 +101,7 @@ nav a:hover {
 
 /* Finalize navigation bar. Begin main */
 
-.main {
+main {
   position: absolute;
   top: 548px;
   left: 0;
@@ -318,7 +318,9 @@ nav a:hover {
 }
 
 .detail-container p, .detail-container h4 {
-  padding: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+
 }
 
 #china {
@@ -421,7 +423,80 @@ nav a:hover {
   margin-bottom: 20%;
 }
 
-/* Finished Fiction and Narrative section. Begin footer */
+/* FInished Fiction and Narrative Section. Begin interests / photo gallery section */
+
+/* This section relies on the tutorial for a photo gallery found at https://www.w3schools.com/howto/howto_js_slideshow.asp, which requires JavaScript 
+
+.interests {
+  grid-area: 5 / 1 / span 1 / span 1;
+  background-color: rgb(240,240,240);
+  display: grid;
+  height: auto;
+  grid-template-columns: 5% 45% 45% 5%;
+}
+
+.interests-left {
+  grid-area: 1 / 2 / span 1 / span 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 20rem;
+}
+
+.ineterests-left h2 {
+  margin-top: 15%;
+  text-align: center;
+}
+
+.interests-right {
+  grid-area: 1 / 3 / span 1 / span 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo-gallery {
+  border: 4px solid #aaa;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.photo-gallery img {
+  max-width: 90%;
+  max-height: 90%;
+  padding: 10px;
+  display: none;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 1rem;
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  border-radius: 0 10px 10px 0;
+  user-select: none;
+  transition: all 0.5s linear;
+}
+
+.next {
+  right: 0px;
+  border-radius: 10px 0 0 10px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.5);
+}
+
+/* Finished interests / photo gallery section. Begin footer */
 
 footer {
   height: 3rem;
@@ -445,7 +520,7 @@ footer h4 {
 
 /* Finish core web content. Begin media responsiveness section */
 
-@media only screen and (max-width:860px) {
+@media screen and (max-width: 860px) {
   #banner h1 {
     padding-top: 5rem;
   }
@@ -541,7 +616,7 @@ footer h4 {
     display: none;
   }
 
-  .caption {
+  figcaption {
     height: auto;
     padding-left: 2rem;
     padding-right: 2rem;
